# anygrab

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  check_cookies.py  docker-compose.yml  file_cache.db  main.py  pyproject.toml  requirements.txt  setup.md  telegram_bot.py  test_download.py  test_main_extract.py  test_opts.py  test_ydl.py  test_ydl2.py  test_ydl3.py  test_ydl4.py  test_ytdlp_download.py
deploy/: anygrab-api.service  anygrab-bot.service  setup.sh
public/: index.html  script.js  style.css
